# cmake-init

cmake-init/: cmake_init.py
cmake-init/templates/: LICENSE
cmake-init/templates/c/executable/: CMakeLists.txt
cmake-init/templates/c/shared/: CMakeLists.txt
cmake-init/templates/common/: CONTRIBUTING.md
cmake-init/templates/common/cmake/: lint-targets.cmake  lint.cmake  prelude.cmake
cmake-init/templates/common/docs/: Doxyfile.in
cmake-init/templates/common/test/: CMakeLists.txt
cmake-init/templates/executable/: CMakeLists.txt
cmake-init/templates/executable/lib/: CMakeLists.txt
cmake-init/templates/executable/lib/src/: CMakeLists.txt  lib.cpp
cmake-init/templates/executable/src/: CMakeLists.txt  main.cpp
cmake-init/templates/executable/test/src/: __name___test.cpp
cmake-init/templates/header/: CMakeLists.txt
cmake-init/templates/header/test/src/: __name___test.cpp
cmake-init/templates/shared/: CMakeLists.txt
cmake-init/templates/shared/include/__name__/: __name__.hpp
cmake-init/templates/shared/src/: CMakeLists.txt  __name__.cpp
cmake-init/templates/shared/test/src/: __name___test.cpp
